tests/res/nullability/trait_self_propagates.say
// The trait-self tag propagates across assignment, so a copy is still surface-restricted.
trait Greeter {
    pub fn greet() {
        say self = this;
        self.untracked.foo; // error: 'untracked' is not declared or required by this trait; declare it or add a 'req'
    }
}
